[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"

# used for day 11
eval = "0.4.3" 

# used for day 6 and 12
itertools = "0.10.5"

# used for day 12
petgraph = "0.6.2"